# FlailSnail

./: .gitignore  CMakeLists.txt  FlailSnail.h  FlailSnail.hpp  README.md  TODO
include/: FlailSnail.h  compilers.h
include/FlailSnail/: print_provenance_log.h  utils.h
src/: print_provenance_log.c  utils.c
tests/: CMakeLists.txt
tests/src/: c_test.c  cpp_test.cpp
