cmake_minimum_required(VERSION 3.4)
project("FlailSnailTests")

find_package(FlailSnail CONFIG REQUIRED)
enable_testing()

file(GLOB_RECURSE C_TEST_FILES "${${PROJECT_NAME}_SOURCE_DIR}/src/*.c")
file(GLOB_RECURSE CXX_TEST_FILES "${${PROJECT_NAME}_SOURCE_DIR}/src/*.cpp")
set(TEST_DIR "${${PROJECT_NAME}_SOURCE_DIR}/bin")
foreach(TEST_SRC ${C_TEST_FILES} ${CXX_TEST_FILES})
    string(REPLACE ${${PROJECT_NAME}_SOURCE_DIR}/ "" TEST_FILE ${TEST_SRC})
    get_filename_component(TEST_NAME ${TEST_FILE} NAME_WE)
    set(TEST_NAME "${TEST_NAME}.exe")
    set(TEST_EXE ${TEST_DIR}/${TEST_NAME})
    set(TEST_CMD ${TEST_EXE})
    add_executable( ${TEST_NAME} ${TEST_SRC})
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_CMD} )
    set_target_properties( ${TEST_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${TEST_DIR})
    target_link_libraries(${TEST_NAME} FlailSnail::FlailSnail)
endforeach(TEST_SRC)
